# ansicee

./: CMakeLists.txt  DGL_Berechnen.c  DGL_Berechnen.h  Gleiderung.md  Grundlagen  Lenkmotoren.c  Lenkmotoren.h  README.md  Subsysteme.h  calcMatrix_A_B.c  calcMatrix_A_B.h  horizontalModel.c  horizontalModel.h  linear.h  main  main.c  matrizeCalculator.c  matrizeCalculator.h  modelAntrieb.h
Benchmark/: ErrorCorrection.c  ErrorCorrection.h  InitTest.c  InitTest.h
Benchmark/Datenanalyse/: Drehzahl.txt  Drehzahl_urpsrung.txt  Fx.txt  Fy.txt  Fz.txt  Geschwindigkeit.txt  T_n.txt  acc.txt  acc2.txt  acc_diff_loop.txt  aend.txt  alpha_r.txt  alpha_x.txt  alpha_y.txt  ax.txt  ay.txt  bend.txt  beta.txt  delta1.txt  delta2.txt  delta3.txt  deltadyn1.txt  deltadyn2.txt  deltadyn3.txt  dynLenk.txt  dynLenk_ursprung.txt  gierrate.txt  iiend.txt  mu.txt  mux.txt  muy.txt  n1.txt  n2.txt  n3.txt  n_updn.txt  n_updn_neu.txt  psi_pp.txt  statischer_Lenkwinkel.txt  statischer_Lenkwinkel_ursprung.txt  step_x.txt  (+10 more)
Benchmark/Raw Data/: delta_1.txt  delta_2.txt  delta_3.txt  delta_dyn_1.txt  delta_dyn_2.txt  delta_dyn_3.txt  geschwindigkeit_x.txt  geschwindigkeit_y.txt  gierrate.txt  n_1.txt  n_2.txt  n_3.txt
include/: ReglerIO.h  calcMatrix_A_B.h  horizontalModel.h  linear.h
src/: DGL_Berechnen.c  Lenkmotoren.c  ReglerIO.c  Subsysteme.c  calcMatrix_A_B.c  horizontalModel.c  linear.c  modelAntrieb.c
